--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           git init
           git config user.name "haoyang9804"
           git config user.email "haoyanghkust@gmail.com"
-          git remote origin add git@github.com:haoyang9804/haoyang9804.github.io.git
+          git remote add origin git@github.com:haoyang9804/haoyang9804.github.io.git
           git add .
           git commit -m "refresh personal website"
           git push origin gh-pages
