--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
+      - name: test MY_GITHUB_TOKEN
+        run: echo ${{ secrets.MY_GITHUB_TOKEN }}
       - name: push gh-pages
         uses: ad-m/github-push-action@master
         with:
