--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,8 @@ jobs:
       - name: config
         working-directory: './site'
         run: |
-          git config user.name github-actions[bot]
-          git config user.email github-actions[bot]@users.noreply.github.com
           git add . && git commit -m "refresh website"
-          git push https://${{ secrets.MY_GITHUB_TOKEN }}@github.com/haoyang9804/haoyang9804.github.io.git 
+          git push https://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@github.com/haoyang9804/haoyang9804.github.io.git 
 #       - name: test MY_GITHUB_TOKEN
 #         run: echo ${{ secrets.MY_GITHUB_TOKEN }}
 #       - name: push gh-pages
