--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           cd site
           pwd
+          git init
           git add . && git commit -m "refresh website"
           git push https://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@github.com/haoyang9804/haoyang9804.github.io.git 
 #       - name: test MY_GITHUB_TOKEN
