--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           pwd
           git init
           git add . && git commit -m "refresh website"
-          git push https://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@github.com/haoyang9804/haoyang9804.github.io.git 
+          git push https://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@github.com/haoyang9804/haoyang9804.github.io.git -f
 #       - name: test MY_GITHUB_TOKEN
 #         run: echo ${{ secrets.MY_GITHUB_TOKEN }}
 #       - name: push gh-pages
