--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           git config user.name haoyang9804
           git config user.email haoyanghkust@gmail.com
           git add . && git commit -m "refresh website"
-          git push https://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@github.com/haoyang9804/haoyang9804.github.io.git -f master:gh-pages
+          git push https://${{ secrets.MY_GITHUB_TOKEN }}/haoyang9804/haoyang9804.github.io.git -f master:gh-pages
 #       - name: test MY_GITHUB_TOKEN
 #         run: echo ${{ secrets.MY_GITHUB_TOKEN }}
 #       - name: push gh-pages
