--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,11 @@ jobs:
           git add .
           git commit -m "refresh website"
       - name: push gh-pages
-        uses: ad-m/github-push-action@master
-        with:
-          repository: haoyang9804/test
-          github_token: ${{ secrets.MY_GITHUB_TOKEN }}
-          branch: gh-pages
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/haoyang9804/haoyang9804.github.io
+          git push origin master:gh-pages
+#         uses: ad-m/github-push-action@master
+#         with:
+#           repository: haoyang9804/test
+#           github_token: ${{ secrets.MY_GITHUB_TOKEN }}
+#           branch: gh-pages
