--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
           cd site
           pwd
           git init
-          git config --local user.email "haoyang9804"
-          git config --local user.name "haoyanghkust@gmail.com"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add .
           git commit -m "refresh website"
       - name: set remote repo
