--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ env.MY_GITHUB_TOKEN }}
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
