--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           python-version: 3.x
       - name: install mkdocs
-        run: pip install mkdocs
+        run: pip install mkdocs-material
       - name: build with mkdocs
         run: mkdocs build
       - name: check the site
