--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,10 @@
 plugins: []
 site_name: Haoyang Ma's homepage
-theme: 
-  name: null
-  custom_dir: 'cinder'
+theme:
+  name: material
+# theme: 
+#   name: null
+#   custom_dir: 'cinder'
 nav:
   - Home: index.md
   - Compiler Correctness: CompilerCorrectness.md
@@ -14,7 +16,23 @@ nav:
 #   - Research: papers.md
 hide:
   - STLC: blog/STLC.md
-extra_css: [extra.css]
-google_analytics: ['UA-36723568-3', 'mkdocs.org']
-# theme: 
-#   name: material
+
+
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:mermaid2.fence_mermaid_custom
+  - pymdownx.arithmatex:
+      generic: true
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+plugins:
+    - mermaid2
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
