--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,10 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - name: install mkdocs
+      - name: install mkdocs-material
         run: pip install mkdocs-material
+      - name: install mkdocs-terminal
+        run: pip install mkdocs-terminal
       - name: install mermaid
         run: pip install mkdocs-mermaid2-plugin
       - name: build with mkdocs
