--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git add .
           git commit -m "refresh website"
-          git push https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/haoyang9804/haoyang9804.github.io master:gh-pages -f
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/haoyang9804/haoyang9804.github.io master:gh-pages -f
