--- a/.github/workflows/update_downloads.yml
+++ b/.github/workflows/update_downloads.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
+        pip install json
     
     - name: Run download count script
       run: |
@@ -28,8 +29,8 @@ jobs:
     
     - name: Commit and push if changed
       run: |
-        git config --global user.name 'GitHub Action'
-        git config --global user.email 'action@github.com'
-        git add downloads_badge.json
-        git commit -m "Update download count badge" || exit 0
-        git push
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add .
+        git commit -m "Update download count badge"
+        git push https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/haoyang9804/haoyang9804.github.io master:master -f
