--- a/.github/workflows/update_downloads.yml
+++ b/.github/workflows/update_downloads.yml
@@ -1,8 +1,8 @@
 name: Update Download Count
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  # schedule:
+  #   - cron: '0 0 * * *'  # Runs daily at midnight UTC
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
