--- a/.github/workflows/update_downloads.yml
+++ b/.github/workflows/update_downloads.yml
@@ -1,12 +1,12 @@
 name: Update Download Count
-on:
-  push:
-    branches:
-      - master
 # on:
-#   schedule:
-#     - cron: '0 0 * * *'  # Runs daily at midnight UTC
-#   workflow_dispatch:  # Allows manual triggering
+#   push:
+#     branches:
+      - master
+on:
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   update-downloads:
